Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58482

qtwebengine fails to compile chromium against libjpeg >= 9

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.10
    • 5.7.1
    • WebEngine
    • None
    • 560a4a616f2a1307385e5e7a7d2e99b0b41775c8

    Description

      Improper use of booleans causes compilation failures with libjpeg >= 9.
      I reported this problem in the chromium bug tracker and attached a patch there that solves it.

      https://bugs.chromium.org/p/chromium/issues/detail?id=686191

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            viengelm Viktor Engelmann
            griffon26 Maurice van der Pot
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes