Fix JPEG boolean values

jpeg_codec.cc contained some implicit conversions to boolean, which
is apparently problematic for some versions of libjpeg. Patch
taken from https://bugs.chromium.org/p/chromium/issues/detail?id=686191
but not backported, since it has not been accepted into chromium yet.

Task-Number: QTBUG-58482

Change-Id: I2c5d5894493d6a7d0698a4e5a7191288a2fdfeb4
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>